<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nssvast.lednss.houseEntry">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_member_entry"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:visibility="visible"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/title"
                    android:text="@string/member_title"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/subtitle"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:text="@string/name"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:layout_marginRight="@dimen/subtitle_left"
                    android:layout_marginEnd="@dimen/subtitle_left"
                    android:inputType="textCapCharacters"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/subtitle"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:text="@string/age"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:layout_marginRight="@dimen/subtitle_left"
                    android:layout_marginEnd="@dimen/subtitle_left"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/subtitle"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:text="@string/sex"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:layout_marginRight="@dimen/subtitle_left"
                    android:layout_marginEnd="@dimen/subtitle_left">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/subtitle_left"
                        android:layout_marginEnd="@dimen/subtitle_left"
                        android:text="@string/male"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/subtitle_left"
                        android:layout_marginEnd="@dimen/subtitle_left"
                        android:text="@string/female"/>
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/subtitle"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:text="@string/edu_qualification"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:layout_marginRight="@dimen/subtitle_left"
                    android:layout_marginEnd="@dimen/subtitle_left"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/subtitle"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:text="@string/job"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:layout_marginRight="@dimen/subtitle_left"
                    android:layout_marginEnd="@dimen/subtitle_left"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/subtitle"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:text="@string/uid_no"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:layout_marginRight="@dimen/subtitle_left"
                    android:layout_marginEnd="@dimen/subtitle_left"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/subtitle"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:text="@string/election_no"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:layout_marginRight="@dimen/subtitle_left"
                    android:layout_marginEnd="@dimen/subtitle_left"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/subtitle"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:text="@string/govt_aids"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:layout_marginRight="@dimen/subtitle_left"
                    android:layout_marginEnd="@dimen/subtitle_left"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/subtitle"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:text="@string/mob_no"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:layout_marginRight="@dimen/subtitle_left"
                    android:layout_marginEnd="@dimen/subtitle_left"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/subtitle"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:text="@string/any_traits"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:layout_marginRight="@dimen/subtitle_left"
                    android:layout_marginEnd="@dimen/subtitle_left"
                    android:inputType="text"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/title"
                    android:layout_marginLeft="@dimen/subtitle_left"
                    android:layout_marginStart="@dimen/subtitle_left"
                    android:layout_marginRight="@dimen/subtitle_left"
                    android:layout_marginEnd="@dimen/subtitle_left">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|left"
                        android:text="@string/back"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|end"
                        android:text="@string/submit"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>